                    included "DataSelectionMenu.h"
                    added    ActivateResearcherMenu()
                    changed  backLoad()
                    changed  activate()
                    changed onRaceFinished();
                    removed player, graph, opengl, advanced graph, simu, ai, hostsettings configs
                mainscreens/
                    mainmenu.cpp
                        included "DataSelectionMenu.h"
                        removed  <playerconfig.h>
                        changed  MainMenuInit()
                        changed  MainMenuInit()
                        included "ConfigEnums.h"
                        changed  onExitMenuActive() method
                        renamed  raceselectmenuinit to researcherselectmenuinit
                    exitmenu.cpp
                        included "ConfigEnums.h"
                        included "EndExperimentMenu.h"
                        changed  functionality of ExitMenuInit method
                        changed  ExitMenuInit()
                    exitmenu.h
                        included "ConfigEnums.h"
                        changed  ExitMenuInit(): more parameters
                    optionsmenu.cpp
                        removed graphics, advanced graphics, opengl, simulation, ai opponents menu
                        added controls
                    splash.cpp
                        changed splashDisplay() removed version string
                racescreens/
                    raceresultsmenus.cpp
                        included "EndExperimentMenu.h"
                        included several 'Quit' buttons
                    racestopmenu.cpp
                        RmStopRaceMenu()
                        changed AssistedHuman is a human
                        changed rmAbortRaceHookHandle()
                        changed rmRestartRaceHooKHandle()
                        changed rmQuitHookActive()