@@ -191,8 +191,8 @@
 			<attstr name="text" val="Cancel"/>
 			<attstr name="tip" val="Cancel changes"/>
 			<attstr name="h align" val="left"/>
-			<attnum name="x" val="278"/>
-			<attnum name="y" val="40"/>
+			<attnum name="x" val="40"/>
+			<attnum name="y" val="41"/>
 			<attnum name="width" val="120"/>
 			<attstr name="font" val="medium"/>
 			<attstr name="color" val="0xFFFFFF"/>
@@ -213,8 +213,8 @@
 			<attstr name="text" val="Apply"/>
 			<attstr name="tip" val="Accept and save changes"/>
 			<attstr name="h align" val="left"/>
-			<attnum name="x" val="435"/>
-			<attnum name="y" val="40"/>
+			<attnum name="x" val="550"/>
+			<attnum name="y" val="41"/>
 			<attnum name="width" val="120"/>
 			<attstr name="font" val="medium"/>
 			<attstr name="color" val="0xFFFFFF"/>
